2008-12-19  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_presence.erl: style(9).

2008-12-17  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_presence.erl: Bug fix in get_type/1.

2008-12-10  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.js: Fixed the "usage" string.

	* src/core/exmpp_known_nss.erl.awk, src/core/exmpp_known_nss.erl.js,
	src/core/exmpp_known_elems.erl.awk, src/core/exmpp_known_elems.erl.js,
	src/core/exmpp_known_attrs.erl.awk, src/core/exmpp_known_attrs.erl.js,
	src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Generate Erlang
	modules to convert known namespaces/elements/attributes to list. This
	benefits from Erlang constants handling and decreases memory
	footprint. Thanks to Pablo Polvorin.

	* src/core/exmpp_xml.erl: Use the new modules to convert known
	namespaces/elements/attributes. Thanks to Pablo Polvorin.
	(node_to_list/3, node_to_binary/3): Remove specific code and use
	node_to_iolist/3.

	* src/network/exmpp_session.erl: Update parser options; they were left
	behind after exmpp_xml updates. Thanks to Pablo Polvorin.

	* src/core/exmpp_xml.erl: Restore get_name_as_atom/1; it was renamed
	as get_names_as_atom/1 when the name_as_atom option was renamed to
	names_as_atom.

	* src/core/exmpp_tls.erl, c_src/exmpp_tls_openssl.c,
	c_src/exmpp_tls.h: Rename COMMAND_SVN_REVISION to
	COMMAND_PORT_REVISION.

2008-12-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/exmpp_known_nss.hrl.awk,
	include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.awk,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.awk,
	include/internal/exmpp_known_attrs.hrl.js: Fix headers generation to
	remove duplicates. Thanks to Pablo Polvorin.

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
