@@ -25,26 +25,48 @@ EXPAT_PREFIX = C:\Program Files\Expat 2.0.1
 EXPAT_CPPFLAGS = -I"$(EXPAT_PREFIX)\Source\lib"
 EXPAT_LIBS = "$(EXPAT_PREFIX)\Bin\libexpat.lib"
 
+!IFNDEF LIBXML2_PREFIX
+LIBXML2_PREFIX = C:\Program Files\libxml2-2.7.2.win32
+!ENDIF
+LIBXML2_CPPFLAGS = -I"$(LIBXML2_PREFIX)\include"
+LIBXML2_LIBS = "$(LIBXML2_PREFIX)\lib\libxml2.lib"
+
 !IFNDEF OPENSSL_PREFIX
 OPENSSL_PREFIX = C:\Program Files\GnuWin32
 !ENDIF
 OPENSSL_CPPFLAGS = -I"$(OPENSSL_PREFIX)\include"
 OPENSSL_LIBS = "$(OPENSSL_PREFIX)\lib\libssl.lib" "$(OPENSSL_PREFIX)\lib\libcrypto.lib"
+
+!IFNDEF ICONV_PREFIX
+ICONV_PREFIX = C:\Program Files\iconv-1.9.2.win32
+!ENDIF
+ICONV_CPPFLAGS = -I"$(ICONV_PREFIX)\include"
+ICONV_LIBS = "$(ICONV_PREFIX)\lib\iconv.lib"
+
 !IFNDEF ZLIB_PREFIX
 ZLIB_PREFIX = C:\Program Files\zlib123-dll
 !ENDIF
 ZLIB_CPPFLAGS = -I"$(ZLIB_PREFIX)\include"
 ZLIB_LIBS = "$(ZLIB_PREFIX)\lib\zdll.lib"
 
-DRIVERS = exmpp_xml_expat.dll exmpp_stringprep.dll exmpp_tls_openssl.dll exmpp_compress_zlib.dll
-
-BUILT_SOURCES = xmpp_nss.h xmpp_names.h xmpp_attrs.h
+DRIVERS = exmpp_stringprep.dll
+!IFNDEF DISABLE_XML_EXPAT
+DRIVERS = $(DRIVERS) exmpp_xml_expat.dll exmpp_xml_expat_legacy.dll
+!ENDIF
+!IFNDEF DISABLE_XML_LIBXML2
+DRIVERS = $(DRIVERS) exmpp_xml_libxml2.dll
+!ENDIF
+!IFNDEF DISABLE_TLS_OPENSSL
+DRIVERS = $(DRIVERS) exmpp_tls_openssl.dll
+!ENDIF
+!IFNDEF DISABLE_COMPRESS_ZLIB
+DRIVERS = $(DRIVERS) exmpp_compress_zlib.dll
+!ENDIF
 
 all: $(DRIVERS)
 
 clean:
 	-del $(DRIVERS)
-	-del $(BUILT_SOURCES)
 	-del *.obj *.exp *.lib *.dll.manifest
 
 .PHONY: clean
@@ -53,46 +75,52 @@ clean:
 # Supported port drivers.
 # --------------------------------------------------------------------
 
-# Generated headers.
-xmpp_nss.h: xmpp_nss.h.js xmpp_nss.h.in
-	cscript /nologo $*.h.js $*.h.in > $*.h
-
-xmpp_names.h: xmpp_names.h.js xmpp_names.h.in
-	cscript /nologo $*.h.js $*.h.in > $*.h
-
-xmpp_attrs.h: xmpp_attrs.h.js xmpp_attrs.h.in
-	cscript /nologo $*.h.js $*.h.in > $*.h
-
-# Expat port driver
-hashtable.obj: contrib\hashtable.h contrib\hashtable_private.h contrib\hashtable.c
-	$(cc) $(cdebug) $(cflags) -Icontrib $(cvarsdll) contrib\$*.c
-
-exmpp_xml_expat.obj: $(BUILT_SOURCES) contrib\hashtable.h exmpp_xml_expat.c
-	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(EXPAT_CPPFLAGS) $*.c
-
-exmpp_xml_expat.dll: hashtable.obj exmpp_xml_expat.obj
-	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(EXPAT_LIBS)
-
-# Stringprep port driver.
-exmpp_stringprep.obj: stringprep_uni_data.h stringprep_uni_norm.h exmpp_stringprep.c
+# Common sources.
+exmpp_driver.obj: exmpp_driver.h exmpp_driver.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $*.c
+exmpp_xml.obj: exmpp_driver.h exmpp_xml.h exmpp_xml.c
 	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $*.c
 
-exmpp_stringprep.dll: exmpp_stringprep.obj
+# Expat port drivers.
+exmpp_xml_expat.obj: exmpp_driver.h exmpp_xml.h exmpp_xml_expat.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(EXPAT_CPPFLAGS) $*.c
+
+exmpp_xml_expat.dll: exmpp_driver.obj exmpp_xml.obj exmpp_xml_expat.obj
+	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(EXPAT_LIBS)
+
+exmpp_xml_expat_legacy.obj: exmpp_driver.h exmpp_xml.h exmpp_xml_expat_legacy.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(EXPAT_CPPFLAGS) $*.c
+
+exmpp_xml_expat_legacy.dll: exmpp_driver.obj exmpp_xml.obj exmpp_xml_expat_legacy.obj
+	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(EXPAT_LIBS)
+
+# LibXML2 port driver.
+exmpp_xml_libxml2.obj: exmpp_driver.h exmpp_xml.h exmpp_xml_libxml2.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(ICONV_CPPFLAGS) $(LIBXML2_CPPFLAGS) $*.c
+
+exmpp_xml_libxml2.dll: exmpp_driver.obj exmpp_xml.obj exmpp_xml_libxml2.obj
+	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(ICONV_LIBS) $(LIBXML2_LIBS)
+
+# Stringprep port driver.
+exmpp_stringprep.obj: exmpp_driver.h stringprep_uni_data.h stringprep_uni_norm.h exmpp_stringprep.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $*.c
+
+exmpp_stringprep.dll: exmpp_driver.obj exmpp_stringprep.obj
 	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS)
 
 # OpenSSL TLS port driver.
-exmpp_tls.obj: exmpp_tls.h exmpp_tls.c
-	$(cc) $(cdebug) $(cflags) $(cvarsdll) $*.c
+exmpp_tls.obj: exmpp_driver.h exmpp_tls.h exmpp_tls.c
+	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $*.c
 
-exmpp_tls_openssl.obj: exmpp_tls.h exmpp_tls_openssl.c
+exmpp_tls_openssl.obj: exmpp_driver.h exmpp_tls.h exmpp_tls_openssl.c
 	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(OPENSSL_CPPFLAGS) $*.c
 
-exmpp_tls_openssl.dll: exmpp_tls.obj exmpp_tls_openssl.obj
+exmpp_tls_openssl.dll: exmpp_driver.obj exmpp_tls.obj exmpp_tls_openssl.obj
 	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(OPENSSL_LIBS)
 
 # Zlib compression port driver.
-exmpp_compress_zlib.obj: exmpp_compress.h exmpp_compress_zlib.c
+exmpp_compress_zlib.obj: exmpp_driver.h exmpp_compress.h exmpp_compress_zlib.c
 	$(cc) $(cdebug) $(cflags) $(cvarsdll) $(EI_CPPFLAGS) $(ZLIB_CPPFLAGS) $*.c
 
-exmpp_compress_zlib.dll: exmpp_compress_zlib.obj
+exmpp_compress_zlib.dll: exmpp_driver.obj exmpp_compress_zlib.obj
 	$(link) $(ldebug) $(dlllflags) $(conlibsdll) -out:$*.dll $** $(EI_LIBS) $(ZLIB_LIBS)
